[package]
name = "libatasmart-sys"
version = "0.2.1"
authors = ["Chris Holcombe <xfactor973@gmail.com>"]
description = "Rust bindings for the libatasmart library"
license = "MIT"
repository = "https://github.com/cholcombe973/libatasmart-sys"

[dependencies]
libc = "~0.2"
c2rust-bitfields = "0.19.0"
